# ezcad

./: .gitignore  README.md  pygfx-api-reference.md  pyproject.toml
examples/: interative_demo.py  menu_demo.py  pie_menu_demo.py
ezcad/: __init__.py  commands.py  icons.py  menu.py  proxy.py  rpc.py  server.py  view.py  visual.py
ezcad/d2/: __init__.py  profile.py
ezcad/d3/: __init__.py  shape.py
ezcad/server/: __init__.py  backend.py  connect.py  menu.py  messages.py  render.py  render_world.py  world.py
tests/: test_ezcad.py  test_geom.py  test_proxy.py
