[project]
name = "ezcad"
version = "0.1.0"
description = "A lightweight CAD-like library built on build123d (OpenCASCADE) and pygfx"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pygfx",
    "numpy",
    "shapely",
    "pyside6",
    "build123d>=0.10.0",
    "websockets>=16.0",
    "msgspec>=0.21.0",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.100",
    "fastapi-websocket-rpc>=0.1.29",
    "uvicorn>=0.30",
    "rpyc>=6.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ezcad*"]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ipython",
]

[tool.uv.sources]
pygfx = { git = "https://github.com/pygfx/pygfx", branch = "main" }
